<resources>
    <string name="app_name">Hymnal</string>
    <string name="app_title_main">Shulamite - Hymns</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_renew">Add/Renew</string>
    <string name="overwrite">Overwrite</string>
    <string name="add_to_db">Has been added and saved to the database!</string>
    <string name="add_to_db_failed">Failed to save media record!</string>
    <string name="app_libraries">Hymnch uses the following third-party libraries: %1$s</string>
    <string name="buffering">Buffering&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="copyright">Copyright@2020, Eng Chong Meng
        &lt;br/>&lt;a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0&lt;/a>
        &lt;br/>All rights reserved.</string>
    <string name="db_export">DB Expt</string>
    <string name="db_import"><u>DB Impt</u></string>
    <string name="db_import_file">DB import file</string>
    <string name="db_import_proceed">Start import file: \'%1$s\' contents  (%2$s), into database media records</string>
    <string name="db_import_record">The db imports a total of %1$d (%2$d) hymns</string>
    <string name="db_import_start">Start importing file contents into database media records…</string>
    <string name="db_import_NQ"><u>NQ&#x2B07;</u></string>
    <string name="db_file_missing">Please provide the absolute path of the media content!</string>
    <string name="db_list">DB List</string>
    <string name="db_no_overwrite">Retain Record</string>
    <string name="db_overwrite">Overwrite Record</string>
    <string name="db_overwrite_media">Do you want to overwrite existing media records in the database?</string>
    <string name="delete">Delete</string>
    <string name="delete_history">Delete hymn history: %1$s?</string>
    <string name="delete_media">Delete hymn media records? &lt;br/>%1$s#%2$04d: %3$s</string>
    <string name="delete_media_failed">Failed to delete media record: %1$s#%2$d</string>
    <string name="delete_media_ok">Successfully deleted media record: %1$s#%2$d</string>
    <string name="en2ch_hymn_same">The Chinese and English hymn numbers are the same!</string>
    <string name="exit">Exit</string>
    <string name="file_saved">The file was saved successfully!</string>
    <string name="help_online">Online Help</string>
    <string name="hymn_no">Hymn No:</string>
    <string name="hymn_sn_convert">Hymn digital conversion test</string>
    <string name="hymn_type">Hymn Category:</string>
    <string name="in_development">Still under development</string>
    <string name="lyrics_chinese_traditional"><u>CN&#x2B0C;TW Lyrics</u></string>
    <string name="lyrics_chinese_english"><u>CN&#x2B0C;ENG Lyrics</u></string>
    <string name="lyrics_english">Online English lyrics</string>
    <string name="lyrics_english_delete">Delete English lyrics</string>
    <string name="lyrics_text_size_increase">Increase lyrics text</string>
    <string name="lyrics_text_size_decrease">Lyrics text reduced</string>
    <string name="lyrics_text_size_limits">The text minimum or maximum limit has been reached.</string>
    <string name="media_content_remove">Remove media content from phone (if any)</string>
    <string name="media_config">Media Configuration</string>
    <string name="media_file_not_found">The actual media content to link to could not be found! Please save a copy to the desired location.</string>
    <string name="media_link">Media Link:</string>
    <string name="media_content">Media content</string>
    <string name="media_type">Media Type:</string>
    <string name="ok">OK</string>
    <string name="back">Return</string>
    <string name="auto_stream">Auto next media</string>
    <string name="auto_stream_start">Do you want to start auto streaming/online download of \"%1$s:%2$s\"?</string>
    <string name="auto_stream_unsupported">Auto sream not supported for \"%1$s:%2$s\."</string>
    <string name="nq_download">NQ－Hymns link download</string>
    <string name="nq_download_completed">%1$s－Hymns link: %2$s (%3$s) download completed!</string>
    <string name="nq_download_failed">%1$s－Hymns link download failed!</string>
    <string name="nq_download_in_progress">%1$s－Link downloading…</string>
    <string name="nq_download_proceed">Proceed %1$s hymn link download (%2$s)?\nThe process takes some time. The process will take place in the background and you can continue using the application.</string>
    <string name="nq_download_starting">%1$s－Hymns link downloading starts…</string>
    <string name="nq_record_delete">Delete NQ-media link record:\n%1$s?</string>
    <string name="playback_completed">Playback completed</string>
    <string name="playback_rate">Video playback rate: %1$sx</string>
    <string name="to_be_added">To be added</string>
    <string name="unsaved_changes">You have unsaved changes. Save or cancel and exit.</string>
    <string name="version">App version: %1$s-%2$d</string>
    <string name="show_history_log"><u>History</u></string>
    <string name="wp_size">Wallpaper pixel size [width x height]: [%1$dx%2$d]</string>
    <string name="error">Error</string>
    <string name="error_hymn_config">Input error: No hymn no or media link</string>
    <string name="error_invalid">Input error: Input TOC or hymnNo</string>
    <string name="error_media_url_invalid">The provided media URL is incorrect: %1$s</string>
    <string name="error_playback">Unable to decode link or playback: %1$s</string>
    <string name="error_search_empty">Please enter string to search</string>
    <string name="error_file_not_found"> (Unable to get file: %1$s)</string>
    <string name="error_english_lyrics_null">Sorry! Hymn \'%1$d\' has no English lyrics</string>
    <string name="error_invalid_mimetype_download">App does not support download mimeType: \'%s\'</string>
    <string name="hymn_info_bb_max">FuGe has only %1$d (%2$d)</string>
    <string name="hymn_info_bb_range_over">BuChong does not have hymn: %1$s~%2$s (%3$s)</string>
    <string name="hymn_info_db_max">DaBen only has %1$d (%2$d), and 6 FuGe</string>
    <string name="hymn_info_db_range_fu">DaBen only has FuGe: 1~6</string>
    <string name="hymn_info_er_max">ErGe has only %1$d (%2$d)</string>
    <string name="hymn_info_er_range_over">ErGe does not have: %1$s~%2$s (%3$s)</string>
    <string name="hymn_info_xb_max">XinSong has only %1$d (%2$d)</string>
    <string name="hymn_info_xb_invalid">XinSong does not have: %1$s</string>
    <string name="hymn_info_xg_max">XinShi has only %1$d (%2$d)</string>
    <string name="hymn_info_xg_invalid">XinShi does not have: %1$s</string>
    <string name="hymn_info_yb_max">QingNian has only %1$d (%2$d)</string>
    <string name="hymn_info_yb_invalid">QingNian does not have: %1$s</string>
    <string name="hymn_info_media_none">The selected item does not have playback media</string>
    <string name="hymn_info_sp_none">Selected item does not have FuGe</string>
    <string name="app_apk_invalid">The downloaded file is invalid or the version is incorrect</string>
    <string name="apk_install_failed">An error occurred during app installation: (%1$s) %2$s</string>
    <string name="apk_install_completed">The app was installed successfully!</string>
    <string name="app_install_ready">The app package (%1$s) has been downloaded and is ready to be installed.</string>
    <string name="app_version_invalid">Downloaded file contains mismatched version code: Actual = %1$s (%2$s)</string>
    <string name="app_new_available">Online new app version: %1$s-%2$s</string>
    <string name="app_reinstall">Reinstall</string>
    <string name="app_update">upgrade</string>
    <string name="app_upgrade">Update App</string>
    <string name="app_update_check">Update</string>
    <string name="app_update_install">App update</string>
    <string name="app_update_none">No new version of the application</string>
    <string name="app_version_current">Current installed version:\n%1$s-%2$s are up to date.\nVersion available online: %3$s-%4$s.</string>
    <string name="app_version_new_available">New version %1$s available;\nVersion-Code:%2$s-%3$s.\nInstalled version: %4$s-%5$s.</string>
    <string name="app_uninstall">App version v1.2.0 needs to be uninstalled first.\nThen manually install from the download directory:\n%1$s</string>
    <string name="download">Download</string>
    <string name="download_again">Download</string>
    <string name="download_completed">Download completed</string>
    <string name="download_failed">Failed to download new version! Please exit the app and try again.</string>
    <string name="download_in_progress">Downloading update.</string>
    <string name="download_remaining_time">Remaining time: %1$s</string>
    <string name="download_speed">Download speed: %1$s/sec (%2$s)</string>
    <string name="download_timeout_timer">Download timeout timer countdown: %1$02d seconds</string>
    <string name="download_wait">Please wait, file downloading is in progress.</string>
    <string name="in_progress">In progress</string>
    <string name="file_access_no_permission">You do not have sufficient permissions to save or open file. Please check your app permissions and try again</string>
    <string name="send_logs">Bug Rpt</string>
    <string name="hymn_bb">Bu Chong</string>
    <string name="hymn_db">Da Ben</string>
    <string name="hymn_er">Er Ge</string>
    <string name="hymn_xb">Xin Song</string>
    <string name="hymn_xg">Xin Shi</string>
    <string name="hymn_yb"><u>Qing Nian</u></string>
    <string name="hymn_media_banzou">伴奏</string>
    <string name="hymn_media_changshi"><u>唱诗</u></string>
    <string name="hymn_media_jiaochang"><u>教唱</u></string>
    <string name="hymn_media_media"><u>媒体</u></string>
    <string name="nn0">0</string>
    <string name="nn1">1</string>
    <string name="nn2">2</string>
    <string name="nn3">3</string>
    <string name="nn4">4</string>
    <string name="nn5">5</string>
    <string name="nn6">6</string>
    <string name="nn7">7</string>
    <string name="nn8">8</string>
    <string name="nn9">9</string>
    <string name="nn10">Fu</string>
    <string name="help">Help</string>
    <string name="fontSize">Font Size</string>
    <string name="small">Small</string>
    <string name="lager">Big</string>
    <string name="normal">Default</string>
    <string name="xlager">Extra Large</string>
    <string name="inc">Increase</string>
    <string name="dec">Decrease</string>
    <string name="fontColor">Font Color</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="grey">Grey</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="cyan">Cyan</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="theme_menu">Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="locale_menu">Language</string>
    <string name="locale_system">Follow system</string>
    <string name="locale_chinese" translatable="false">简体中文</string>
    <string name="locale_chinese_hant" translatable="false">繁體中文</string>
    <string name="locale_english" translatable="false">English</string>
    <string name="lyrics_default_title">Default lyrics language</string>
    <string name="lyrics_follow_ui">Follow app language</string>
    <string name="lyrics_simplified">Simplified Chinese</string>
    <string name="lyrics_traditional">Traditional Chinese</string>
    <string name="STD">Word conversion standard table</string>
    <string name="S2HK">Simplified to HongKong Traditional</string>
    <string name="S2TW">Simplified to Taiwan Traditional</string>
    <string name="permission_settings">Android Permission Settings</string>
</resources>