<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/appTheme"
        android:title="@string/theme_menu">
        <menu>
            <item
                android:id="@+id/themeDark"
                android:title="@string/theme_dark" />
            <item
                android:id="@+id/themeLight"
                android:title="@string/theme_light" />
        </menu>
    </item>
    <item
        android:id="@+id/appLocale"
        android:title="@string/locale_menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/localeSystem"
                    android:title="@string/locale_system" />
                <item
                    android:id="@+id/localeChinese"
                    android:title="@string/locale_chinese" />
                <item
                    android:id="@+id/localeChineseHant"
                    android:title="@string/locale_chinese_hant" />
                <item
                    android:id="@+id/localeEnglish"
                    android:title="@string/locale_english" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/readingSettings"
        android:title="@string/reading_settings" />
    <item
        android:id="@+id/fontColor"
        android:title="@string/fontColor">
        <menu>
            <item
                android:id="@+id/red"
                android:title="@string/red" />
            <item
                android:id="@+id/blue"
                android:title="@string/blue" />
            <item
                android:id="@+id/white"
                android:title="@string/white" />
            <item
                android:id="@+id/grey"
                android:title="@string/grey" />
            <item
                android:id="@+id/cyan"
                android:title="@string/cyan" />
            <item
                android:id="@+id/yellow"
                android:title="@string/yellow" />
            <item
                android:id="@+id/green"
                android:title="@string/green" />
            <item
                android:id="@+id/black"
                android:title="@string/black" />
        </menu>
    </item>
    <item
        android:id="@+id/fontSize"
        android:title="@string/fontSize">
        <menu>
            <item
                android:id="@+id/small"
                android:title="@string/small" />
            <item
                android:id="@+id/middle"
                android:title="@string/normal" />
            <item
                android:id="@+id/lager"
                android:title="@string/lager" />
            <item
                android:id="@+id/xlager"
                android:title="@string/xlager" />
            <item
                android:id="@+id/inc"
                android:title="@string/inc" />
            <item
                android:id="@+id/dec"
                android:title="@string/dec" />
        </menu>
    </item>
    <item
        android:id="@+id/sn_convert"
        android:title="@string/hymn_sn_convert"
        android:visible="false" />
    <item
        android:id="@+id/media_config"
        android:title="@string/media_config" />
    <item
        android:id="@+id/permission_request"
        android:title="@string/permission_settings" />
    <item
        android:id="@+id/online_help"
        android:title="@string/help_online" />
    <item
        android:id="@+id/about"
        android:title="@string/about" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit" />
</menu>