<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hymnsGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    tools:ignore="ExtraText">

    <Button
        android:id="@+id/btn_hymnSearch"
        style="@style/ButtonTop"
        android:background="@drawable/bg_media_chip"
        android:textColor="?attr/colorOnSurface"
        android:paddingStart="6dp"
        android:layout_weight="0.7"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="-12dp"
        android:text="…"
        tools:ignore="HardcodedText,RtlSymmetry" />"/>

    <RadioButton
        android:id="@+id/btn_media"
        style="@style/ButtonRadio"
        android:background="@drawable/bg_media_chip"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="1dp"
        android:text="@string/hymn_media_media" />

    <RadioButton
        android:id="@+id/btn_jiaochang"
        style="@style/ButtonRadio"
        android:background="@drawable/bg_media_chip"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="1dp"
        android:text="@string/hymn_media_jiaochang" />

    <RadioButton
        android:id="@+id/btn_changshi"
        style="@style/ButtonRadio"
        android:background="@drawable/bg_media_chip"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="1dp"
        android:text="@string/hymn_media_changshi" />

    <RadioButton
        android:id="@+id/btn_banzhou"
        style="@style/ButtonRadio"
        android:background="@drawable/bg_media_chip"
        android:textColor="?attr/colorOnSurface"
        android:checked="true"
        android:layout_marginStart="1dp"
        android:text="@string/hymn_media_banzou" />

</RadioGroup>
